--- a/package.json
+++ b/package.json
@@ -1,32 +1,25 @@
 {
   "name": "gwapedwink-first",
-  "version": "0.3.0",
-  "description": "First node deploy.",
-  "engines": {
-    "node": "8.9.1",
-    "npm": "4.6.1"
-  },
-  "main": "index.js",
+  "version": "1.0.0",
+  "description": "This example is so cool.",
+  "main": "web.js",
   "scripts": {
-    "start": "node app.js",
-    "test": ""
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "example",
+    "heroku"
+  ],
+  "author": "jane-doe",
+  "license": "MIT",
   "dependencies": {
-    "ejs": "^2.5.6",
-    "express": "^4.15.2"
-  },
-  "devDependencies": {
-    "request": "^2.81.0",
-    "tape": "^4.7.0"
+    "express": "^4.9.8"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/GwapeDwink/first"
   },
-  "keywords": [
-    "node",
-    "heroku",
-    "express"
-  ],
-  "license": "MIT"
+  "engines": {
+    "node": "4.1.1"
+  }
 }
