--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "example",
     "heroku"
   ],
-  "author": "jane-doe",
+  "author": "GwapeDwink",
   "license": "MIT",
   "dependencies": {
     "express": "^4.9.8"
