--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
-  "name": "gwapedwink-first",
-  "version": "1.0.0",
-  "description": "This example is so cool.",
-  "main": "web.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "node-js-getting-started",
+  "version": "0.3.0",
+  "description": "A sample Node.js app using Express 4",
+  "engines": {
+    "node": "8.9.1"
   },
-  "keywords": [
-    "example",
-    "heroku"
-  ],
-  "author": "GwapeDwink",
-  "license": "MIT",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "test": "node test.js"
+  },
   "dependencies": {
-    "express": "^4.9.8"
+    "ejs": "^2.5.6",
+    "express": "^4.15.2"
+  },
+  "devDependencies": {
+    "request": "^2.81.0",
+    "tape": "^4.7.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/GwapeDwink/first"
+    "url": "https://github.com/heroku/node-js-getting-started"
   },
-  "engines": {
-    "node": "4.1.1"
-  }
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ],
+  "license": "MIT"
 }
