--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "ejs": "^2.5.6",
-    "express": "^4.16.2",
-    "socket.io": "^2.0.4"
+    "express": "4.16.2",
+    "socket.io": "2.0.4"
   },
   "devDependencies": {
     "request": "^2.81.0",
