--- a/package.json
+++ b/package.json
@@ -1,32 +1,23 @@
 {
-  "name": "First",
-  "version": "0.3.0",
-  "description": "A sample Node.js app using Express 4",
+  "name": "First Socket",
+  "version": "1.0.0",
   "engines": {
-    "node": "8.9.1"
+    "node": "6.2.0"
   },
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
+    "start": "node server.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "ejs": "^2.5.6",
-    "express": "4.16.2",
-    "socket.io": "2.0.4"
-  },
-  "devDependencies": {
-    "request": "^2.81.0",
-    "tape": "^4.7.0"
+    "express": "4.13.4",
+    "socket.io": "1.4.6"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/GwapeDwink/first"
   },
-  "keywords": [
-    "node",
-    "heroku",
-    "express"
-  ],
-  "license": "MIT"
 }
