--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "First Socket",
-  "version": "1.0.0",
-  "engines": {
-    "node": "6.2.0"
-  },
-  "description": "",
-  "main": "index.js",
+  "name": "first",
+  "version": "0.0.1",
+  "description": "This example accompanies the\r [Using WebSockets on Heroku with Node.js](https://devcenter.heroku.com/articles/node-websockets)\r tutorial.",
+  "main": "server.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "4.13.4",
-    "socket.io": "1.4.6"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/GwapeDwink/first"
+    "url": "git+https://github.com/GwapeDwink/first.git"
   },
+  "author": "Gwapedwink",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/GwapeDwink/first/issues"
+  },
+  "homepage": "https://github.com/GwapeDwink/first#readme",
+  "dependencies": {
+    "socket.io": "^2.0.4"
+  }
 }
